# turbine-py

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  logging.conf  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  story.md
.github/workflows/: ci.yml  dependabot-auto-merge-py.yml  lint.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  release.yml  tagged-release.yml  unit_tests.yml
docs/: PUBLISHING.md
pkg/turbine/: __init__.py  cli.py
pkg/turbine/proto/: turbine.proto
pkg/turbine/src/: __init__.py
pkg/turbine/src/function_app/: __init__.py  function_server.py  record.py
pkg/turbine/src/function_deploy/: __init__.py  requirements.txt
pkg/turbine/src/turbine_app/: __init__.py  (+4 more)
src/templates/python/: main.py
src/turbine/: __init__.py  cli.py  config_example.env  logger.py  turbine.py  util.py
src/turbine/function-deploy/: Dockerfile
src/turbine/function_deploy/: Dockerfile
src/turbine/runner/: __init__.py  app_generate.py  app_runner.py  baserunner.py  functions_runner.py  runner.py
src/turbine/runtime/: __init__.py  info.py  intermediate.py  local.py  platform.py  types.py
tests/: test_cli.py
tests/funtime/: test_records.py
tests/runtime/: test_intermediate.py  test_local.py  test_types.py
tests/turbine/: run.py
tests/utils/: json-record-cdc.json  json-record-no-cdc.json  json-records-cdc.json  payloads.py  template-records.json  utils.py
(+29 files in other folders)
