[build-system]
requires = [
  "setuptools >= 40.9.0",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode="auto"
testpaths = [
    "tests",
]

[tool.black]
exclude='''
/(
  | pkg/turbine/proto
  | pkg/turbine/src/function_app/proto_gen
  | pkg/turbine/src/turbine_app/proto_gen
  | pkg/turbine/src/function_deploy/proto_gen
)/
'''

[tool.semantic_release]
version_variable = [
  "pkg/turbine/__init__.py:__version__"
]
build_command = "pip install build --user && python -m build"


[tool.semantic_release.branches.main]
match = "(main|master)"
